--- a/register.html
+++ b/register.html
@@ -1,85 +1,181 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Register Admin | UCKGC</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <style>
     body {
-      background: url('cover/walpaper.jpg') center/cover fixed;
-      display: flex; justify-content: center; align-items: center; height: 100vh;
+      background: url('cover/walpaper.jpg') no-repeat center center fixed;
+      background-size: cover;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
-    .container {
-      background: rgba(255,255,255,0.1); padding: 30px; border-radius: 15px;
-      max-width: 400px; width: 100%; backdrop-filter: blur(5px); color: #fff;
+    .register-container {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      max-width: 400px;
+      text-align: center;
+      backdrop-filter: blur(5px);
+      color: #fff;
     }
-    .form-control { background: rgba(255,255,255,0.2); border: none; color: #fff; }
-    .form-control::placeholder { color: #ddd; }
+    .form-control {
+      background: rgba(255, 255, 255, 0.2);
+      border: none;
+      color: #fff;
+    }
+    .form-control::placeholder {
+      color: #ddd;
+    }
     .btn-register {
-      background: rgba(0,121,107,0.8); border: none; padding: 10px; width: 100%;
-      color: #fff; transition: 0.3s;
+      background-color: rgba(0, 121, 107, 0.8);
+      border: none;
+      padding: 10px;
+      border-radius: 5px;
+      color: #fff;
+      font-size: 1rem;
+      width: 100%;
+      transition: background-color 0.3s, transform 0.2s;
     }
-    .btn-register:hover { background: rgba(0,77,64,0.8); transform: scale(1.05); }
-    .msg { margin-top: 10px; font-size: 0.9rem; }
-    .msg.error { color: #ff8c8c; }
-    .msg.success { color: #8cff8c; }
+    .btn-register:hover {
+      background-color: rgba(0, 77, 64, 0.8);
+      transform: scale(1.05);
+    }
+    .error-message {
+      color: red;
+      font-size: 0.9rem;
+      margin-bottom: 10px;
+    }
+    .footer {
+      margin-top: auto;
+      text-align: center;
+      padding: 10px;
+      background-color: rgba(0, 121, 107, 0.5);
+      color: white;
+      width: 100%;
+      position: fixed;
+      bottom: 0;
+    }
+    .loading-spinner {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 1000;
+    }
+    .loading-spinner div {
+      width: 40px;
+      height: 40px;
+      border: 4px solid #f3f3f3;
+      border-top: 4px solid #3498db;
+      border-radius: 50%;
+      animation: spin 2s linear infinite;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h2>Register Admin</h2>
-    <div id="msg" class="msg"></div>
-    <form id="register-form">
-      <input type="email" name="email" class="form-control mb-3" placeholder="Email" required />
-      <input type="password" name="password" class="form-control mb-3" placeholder="Password" required />
-      <input type="password" name="confirm" class="form-control mb-3" placeholder="Confirm Password" required />
-      <button type="submit" class="btn-register">Register</button>
-    </form>
-    <p class="mt-3"><a href="login.html" style="color:#fff;">Already have an account? Login here</a></p>
+
+  <!-- Loading Spinner -->
+  <div id="loadingSpinner" class="loading-spinner">
+    <div></div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <div class="register-container">
+    <h2>Register Admin</h2>
+    <p class="error-message" id="errorMessage"></p>
+    <form id="registerForm">
+      <input type="email" class="form-control mb-3" name="email" placeholder="Email" required>
+      <input type="password" class="form-control mb-3" name="password" placeholder="Password" required>
+      <input type="password" class="form-control mb-3" name="confirm_password" placeholder="Confirm Password" required>
+      <input type="text" class="form-control mb-3" name="location" placeholder="Church Location e.g. UCKGC-Sampalok, Cabatuan, Isabela" required>
+      <button type="submit" class="btn btn-register">Register</button>
+      <p class="mt-3">Already have an account? <a href="login.html" class="text-light">Login here</a></p>
+    </form>
+  </div>
+
+  <div class="footer">
+    &copy; 2024 UCKGC Phil. All Rights Reserved.
+  </div>
+
   <script>
     const supabase = supabase.createClient(
-      'https://wlthlwxcmltwescezjlk.supabase.co',
+    'https://wlthlwxcmltwescezjlk.supabase.co',
       'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndsdGhsd3hjbWx0d2VzY2V6amxrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTE0NDQ4MDcsImV4cCI6MjA2NzAyMDgwN30.tvUeTFVDdQomDHHV0JSpsXHP9IbQVkOhEvBpCglzI-o'
+  
     );
 
-    const form = document.getElementById('register-form');
-    const msg = document.getElementById('msg');
+    const form = document.getElementById("registerForm");
+    const errorMsg = document.getElementById("errorMessage");
+    const loadingSpinner = document.getElementById("loadingSpinner");
 
-    form.addEventListener('submit', async (e) => {
+    form.addEventListener("submit", async (e) => {
       e.preventDefault();
-      msg.textContent = '';
-      msg.className = 'msg';
+      errorMsg.textContent = "";
 
       const email = form.email.value.trim();
       const password = form.password.value;
-      const confirm = form.confirm.value;
+      const confirmPassword = form.confirm_password.value;
+      const location = form.location.value.trim();
+      const verification_code = Math.floor(100000 + Math.random() * 900000).toString();
 
-      if (password !== confirm) {
-        msg.textContent = "Passwords do not match";
-        msg.classList.add("error");
+      if (password !== confirmPassword) {
+        errorMsg.textContent = "Passwords do not match!";
         return;
       }
 
-      const { error } = await supabase.auth.signUp({
-        email,
-        password
-      });
+      loadingSpinner.style.display = "block";
+
+      // Check if email already exists
+      const { data: existing, error: checkError } = await supabase
+        .from("admins")
+        .select("id")
+        .eq("email", email)
+        .maybeSingle();
+
+      if (existing) {
+        errorMsg.textContent = "Email is already registered!";
+        loadingSpinner.style.display = "none";
+        return;
+      }
+
+      // Insert new admin
+      const { data, error } = await supabase
+        .from("admins")
+        .insert([{
+          email,
+          password,
+          location,
+          verification_code,
+          verified: false,
+          status: "pending"
+        }]);
+
+      loadingSpinner.style.display = "none";
 
       if (error) {
-        msg.textContent = error.message;
-        msg.classList.add("error");
+        errorMsg.textContent = "Registration failed: " + error.message;
+        console.error(error);
       } else {
-        msg.textContent = "Check your email to verify your account.";
-        msg.classList.add("success");
-        setTimeout(() => {
-          window.location.href = "verify.html";
-        }, 2000);
+        alert("Successfully registered! Please check your email for the verification code.");
+        // Redirect or store verification code/session if needed
+        window.location.href = "verify.html"; // Make sure this exists
       }
     });
   </script>
+
 </body>
 </html>
+
