--- a/register.html
+++ b/register.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -101,6 +100,11 @@
       <input type="password" class="form-control mb-3" name="password" placeholder="Password" required>
       <input type="password" class="form-control mb-3" name="confirm_password" placeholder="Confirm Password" required>
       <input type="text" class="form-control mb-3" name="location" placeholder="Church Location e.g. UCKGC-Sampalok, Cabatuan, Isabela" required>
+      <select name="role" class="form-control mb-3" required>
+        <option value="" disabled selected>Select Role</option>
+        <option value="admin">Admin</option>
+        <option value="superadmin">Superadmin</option>
+      </select>
       <button type="submit" class="btn btn-register">Register</button>
       <p class="mt-3">Already have an account? <a href="login.html" class="text-light">Login here</a></p>
     </form>
@@ -112,9 +116,8 @@
 
   <script>
     const supabase = supabase.createClient(
-    'https://wlthlwxcmltwescezjlk.supabase.co',
+      'https://wlthlwxcmltwescezjlk.supabase.co',
       'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndsdGhsd3hjbWx0d2VzY2V6amxrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTE0NDQ4MDcsImV4cCI6MjA2NzAyMDgwN30.tvUeTFVDdQomDHHV0JSpsXHP9IbQVkOhEvBpCglzI-o'
-  
     );
 
     const form = document.getElementById("registerForm");
@@ -129,6 +132,7 @@
       const password = form.password.value;
       const confirmPassword = form.confirm_password.value;
       const location = form.location.value.trim();
+      const role = form.role.value;
       const verification_code = Math.floor(100000 + Math.random() * 900000).toString();
 
       if (password !== confirmPassword) {
@@ -151,13 +155,14 @@
         return;
       }
 
-      // Insert new admin
+      // Insert new admin with role
       const { data, error } = await supabase
         .from("admins")
         .insert([{
           email,
           password,
           location,
+          role,
           verification_code,
           verified: false,
           status: "pending"
@@ -170,12 +175,10 @@
         console.error(error);
       } else {
         alert("Successfully registered! Please check your email for the verification code.");
-        // Redirect or store verification code/session if needed
-        window.location.href = "verify.html"; // Make sure this exists
+        window.location.href = "verify.html"; // You must create this page
       }
     });
   </script>
 
 </body>
 </html>
-
