--- a/verify.html
+++ b/verify.html
@@ -2,28 +2,129 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Verify Email | UCKGC</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Verify Account | UCKGC</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <style>
     body {
-      background: url('cover/walpaper.jpg') center/cover fixed;
-      display: flex; justify-content: center; align-items: center; height: 100vh; color: #fff;
-      font-family: sans-serif; text-align: center;
+      background: url('cover/walpaper.jpg') no-repeat center center fixed;
+      background-size: cover;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
-    .box {
-      background: rgba(0,0,0,0.5); padding: 30px; border-radius: 10px;
-      max-width: 400px; width: 100%;
+    .verify-container {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      width: 100%;
+      max-width: 400px;
+      text-align: center;
+      backdrop-filter: blur(5px);
+      color: #fff;
     }
-    a { color: #8cff8c; text-decoration: none; }
-    a:hover { text-decoration: underline; }
+    .form-control {
+      background: rgba(255, 255, 255, 0.2);
+      border: none;
+      color: #fff;
+    }
+    .form-control::placeholder {
+      color: #ddd;
+    }
+    .btn-verify {
+      background-color: rgba(0, 121, 107, 0.8);
+      border: none;
+      padding: 10px;
+      border-radius: 5px;
+      color: #fff;
+      font-size: 1rem;
+      width: 100%;
+      transition: background-color 0.3s, transform 0.2s;
+    }
+    .btn-verify:hover {
+      background-color: rgba(0, 77, 64, 0.8);
+      transform: scale(1.05);
+    }
+    .error-message {
+      color: red;
+      font-size: 0.9rem;
+      margin-bottom: 10px;
+    }
+    .footer {
+      margin-top: auto;
+      text-align: center;
+      padding: 10px;
+      background-color: rgba(0, 121, 107, 0.5);
+      color: white;
+      width: 100%;
+      position: fixed;
+      bottom: 0;
+    }
   </style>
 </head>
 <body>
-  <div class="box">
-    <h2>Verify Your Email</h2>
-    <p>A verification email has been sent to your inbox.</p>
-    <p>Please click the link in the email to activate your account.</p>
-    <p>Return to <a href="login.html">Login</a> once you're verified.</p>
+
+  <div class="verify-container">
+    <h2>Enter Verification Code</h2>
+    <p class="error-message" id="errorMessage"></p>
+    <form id="verifyForm">
+      <input type="email" class="form-control mb-3" name="email" placeholder="Enter your registered email" required>
+      <input type="text" class="form-control mb-3" name="code" placeholder="Enter 6-digit code" maxlength="6" required>
+      <button type="submit" class="btn btn-verify">Verify</button>
+      <p class="mt-3">Back to <a href="login.html" class="text-light">Login</a></p>
+    </form>
   </div>
+
+  <div class="footer">
+    &copy; 2024 UCKGC Phil. All Rights Reserved.
+  </div>
+
+  <script>
+    const supabase = supabase.createClient(
+      'https://wlthlwxcmltwescezjlk.supabase.co',
+      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndsdGhsd3hjbWx0d2VzY2V6amxrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTE0NDQ4MDcsImV4cCI6MjA2NzAyMDgwN30.tvUeTFVDdQomDHHV0JSpsXHP9IbQVkOhEvBpCglzI-o'
+    );
+
+    const form = document.getElementById("verifyForm");
+    const errorMsg = document.getElementById("errorMessage");
+
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      errorMsg.textContent = "";
+
+      const email = form.email.value.trim();
+      const inputCode = form.code.value.trim();
+
+      // Check if user with matching email and code exists
+      const { data: admin, error } = await supabase
+        .from("admins")
+        .select("*")
+        .eq("email", email)
+        .eq("verification_code", inputCode)
+        .maybeSingle();
+
+      if (error || !admin) {
+        errorMsg.textContent = "Invalid email or code.";
+        return;
+      }
+
+      // Update verified and status
+      const { error: updateError } = await supabase
+        .from("admins")
+        .update({ verified: true, status: "approved" })
+        .eq("email", email);
+
+      if (updateError) {
+        errorMsg.textContent = "Verification failed: " + updateError.message;
+      } else {
+        alert("Account verified successfully! You can now log in.");
+        window.location.href = "login.html";
+      }
+    });
+  </script>
+
 </body>
 </html>
